bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_multi_segment_event_path.rs
use macbat::Projection;
#[derive(Projection)]
#[batpak(input = JsonValueInput)]
#[batpak(event = outer::Ev, handler = on_ev)]
struct P {
    a: u8,
}
fn main() {}
